set (worlds
     drc_sim_v0.world
     atlas.world
     atlas_cpu_lidar.world
     atlas_sandia_hands.world
     atlas_sandia_hands_stumps.world
     atlas_irobot_hands.world
     atlas_drc_vehicle_fire_hose.world
     atlas_AtlasSimInterface.world
     drc_practice_task_1.world
     drc_practice_task_3.world
     drc_practice_task_4.world
     drc_practice_task_5.world
     drc_practice_task_7.world
     drc_vehicle.world
     atlas_golf_cart_fire_hose.world
     golf_cart.world
     fire_hose.world
     powerplant.world
     qual_task_1.world
     qual_task_1_stumps.world
     qual_task_2.world
     qual_task_3.world
     qual_task_3_stumps.world
     qual_task_4.world
     vrc_task_1.world
     vrc_task_1_vehicle_start.world
     vrc_task_1_cpu_lidar.world
     vrc_task_2.world
     vrc_task_2_mud_start.world
     vrc_task_2_uneven_start.world
     vrc_task_2_rubble_start.world
     vrc_task_2_cpu_lidar.world
     vrc_task_2_stumps.world
     vrc_task_3.world
     vrc_task_3_firehose_start.world
     vrc_task_3_cpu_lidar.world
    )

install(FILES ${worlds} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}-${DRC_SIM_VERSION}/worlds/)
