add_subdirectory(drc_terrain)
add_subdirectory(drc_vehicle)
add_subdirectory(fire_hose)
add_subdirectory(gate)
add_subdirectory(gate_number_1)
add_subdirectory(gate_number_2)
add_subdirectory(gate_number_3)
add_subdirectory(gate_number_4)
add_subdirectory(gate_number_5)
add_subdirectory(golf_cart)
add_subdirectory(grass_plane)
add_subdirectory(ladder)
add_subdirectory(mud_atlas)
add_subdirectory(pavement_plane)
add_subdirectory(platform_1)
add_subdirectory(platform_2)
add_subdirectory(platform_3)
add_subdirectory(platform_4)
add_subdirectory(powerplant)
add_subdirectory(standpipe)
add_subdirectory(stepping_block)
add_subdirectory(vrc_firehose_long)
add_subdirectory(vehicle_gate)
add_subdirectory(vrc_heightmap_1)
add_subdirectory(vrc_heightmap_2)
add_subdirectory(vrc_standpipe)
add_subdirectory(vrc_valve)


set (files 
  database.config
)

install(FILES ${files} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}/gazebo_models/environments/)
